versioned_docs/version-7.4.0/api/lineChunk.mdx
---
title: lineChunk
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

export function Map0() {
  "use strict";
  // No blank lines so MDX parses code block as a single "export" node.
  // jsdoc example start
  var line = turf.lineString([
    [-95, 40],
    [-93, 45],
    [-85, 50],
  ]);
  var chunk = turf.lineChunk(line, 15, { units: "miles" });
  //addToMap
  var addToMap = { chunk };
  // jsdoc example end
  return <ExampleMap addToMap={addToMap} />;
}

### Description

Divides a [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) into chunks of a specified length.
If the line is shorter than the segment length then the original line is returned.

### Parameters

| Name                    | Type                                                                                                                                                                                                                                                                                                                                                             | Description                                                                                       |
| ----------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------- |
| geojson                 | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) &#124; [Geometry](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) &#124; [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5)&gt;** | the lines to split                                                                                |
| segmentLength           | **[number](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Number)**                                                                                                                                                                                                                                                                  | how long to make each segment                                                                     |
| options<i>?</i>         | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)**                                                                                                                                                                                                                                                                  | Optional parameters _(default &#123;&#125;)_                                                      |
| options.units<i>?</i>   | **[Units](docs/api/types/Units.mdx)**                                                                                                                                                                                                                                                                                                                            | Supports all valid Turf [Units](https://turfjs.org/docs/api/types/Units) _(default 'kilometers')_ |
| options.reverse<i>?</i> | **[boolean](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Boolean)**                                                                                                                                                                                                                                                                | reverses coordinates to start the first chunked segment at the end _(default false)_              |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4)&gt;** collection of line segments

### Examples

```javascript
var line = turf.lineString([
  [-95, 40],
  [-93, 45],
  [-85, 50],
]);

var chunk = turf.lineChunk(line, 15, { units: "miles" });
```

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/line-chunk

import { lineChunk } from "@turf/line-chunk";
const result = lineChunk(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.lineChunk(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
